src/sass/app.scss
@import "variables";
@import "~bootstrap/scss/bootstrap";
@import "custom";

// Vue transitions  ======================================================
.list-enter-active,
.list-leave-active,
.list-move {
    transition: all 0.8s;
}

.list-leave-active {
    position: absolute;
}

.list-enter,
.list-leave-to {
    opacity: 0;
    transform: translateY(30px);
}

.route-transition-enter-active, .route-transition-leave-active {
    transition: opacity .2s;
}

.route-transition-enter, .route-transition-leave-to {
    opacity: 0;
}

// =========================================================================

.body-triangles::before {
    background-image: url('~/public/images/triangles.png');
    opacity: .25;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    content: "";
    z-index: -1;
}

.body-content-padding {
    padding-top: 94px !important;
}

sup {
    font-size: 18px;
}

section {
    @extend .mb-2;
}

.pre-line {
    white-space: pre-line;
}

.cursor-pointer {
    cursor: pointer;
}

.sort-filter {
    @extend .mt-3, .ml-3;

    display: flex;
    flex-wrap: wrap;
    align-items: baseline;

    &--small {
        @extend .small;
    }

    &__title {
        @extend .small;
        width: 60px;
        display: inline-block;

        &--large {
            width: 120px;
        }
    }

    &__items {
        display: flex;
        flex-wrap: wrap;
        align-items: baseline;
        flex: 1;
    }

    &__item {
        padding: 4px;

        &--selected {
            color: #fff;
            font-weight: bold;
        }
    }
}

@include media-breakpoint-down(sm) {
    .sort-filter {
        flex-direction: column;
    }
}

.avatar-img {
    width: 48px;
    height: 48px;
    object-fit: cover;
    border-radius: 100%;
    box-shadow: 0 1px 1rem rgba(10, 10, 25, .5);

    &--small {
        width: 38px;
        height: 38px;
    }
}

.test-image {
    border-radius: 5px 5px 5px 5px;
    -o-object-fit: contain;
    object-fit: contain;
    max-width: 500px;
    max-height: 500px;
    height: auto;
    width: 100%;
}

// =========================================================================
// remove spinner buttons from number inputs
input[type=number] { 
    -moz-appearance: textfield;
    appearance: textfield;
    margin: 0; 
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
      -webkit-appearance: none; 
      margin: 0; 
}

/* RADIO MODES */
.hide-default {
    display: none;
}

input[type="radio"] + .fas { cursor: pointer; }

/* Unchecked */
.osu-radio + .fa-circle:before { content: "\f111"; }
.taiko-radio + .fa-drum:before { content: "\f569"; }
.catch-radio + .fa-apple-alt:before { content: "\f5d1"; }
.mania-radio + .fa-stream:before { content: "\f550"; }
.all-radio + .fa-globe:before { content: "\f0ac"; }
.checkmark-radio + .fa-check:before { content: "\f00c"; }
.cross-radio + .fa-check:before { content: "\f00d"; }
.probation-bn-radio + .fa-stream:before { content: "\f368"; }
.full-bn-radio + .fa-stream:before { content: "\f554"; }
.nat-radio + .fa-stream:before { content: "\f70c"; }

/* Checked */
.osu-radio:checked + .fa-circle:before { 
    color: var(--info);
    content: "\f111"; 
}
.taiko-radio:checked + .fa-drum:before { 
    color: var(--info);
    content: "\f569"; 
}
.catch-radio:checked + .fa-apple-alt:before { 
    color: var(--info);
    content: "\f5d1"; 
}
.mania-radio:checked + .fa-stream:before { 
    color: var(--info);
    content: "\f550"; 
}
.all-radio:checked + .fa-globe:before { 
    color: var(--info);
    content: "\f0ac"; 
}
.checkmark-radio:checked + .fa-check:before { 
    color: var(--info);
    content: "\f00c"; 
}
.cross-radio:checked + .fa-times:before { 
    color: var(--info);
    content: "\f00d"; 
}
.probation-bn-radio:checked + .fa-accessible-icon:before { 
    color: var(--info);
    content: "\f368"; 
}
.full-bn-radio:checked + .fa-walking:before { 
    color: var(--info);
    content: "\f554"; 
}
.nat-radio:checked + .fa-running:before { 
    color: var(--info);
    content: "\f70c"; 
}
/* END RADIO MODES */

/* Scrollbar */
body {
    scrollbar-color: $scrollbar-color;
    overflow: overlay;
}

.header-v4__bg-container {
    z-index: -1;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: $scrollbar-color;
    border-radius: 25px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: lighten($scrollbar-color, 10%);
}

::selection {
    color: $white;
    background: $selection-bg;
}

::-moz-selection { /* Firefox */
    color: $white;
    background: $selection-bg;
}

